--- a/.github/workflows/po4a-comment-check.yaml
+++ b/.github/workflows/po4a-comment-check.yaml
@@ -26,18 +26,12 @@ jobs:
         with:
           ref: ${{ steps.comment-branch.outputs.head_ref }}
 
-      - name: Install po4a
-        run: |
-          sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
-          wget --quiet ${{ vars.PO4A_GH_URL }}/v${{ vars.PO4A_VERSION }}/po4a-${{ vars.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
-          export PO4A_DIR="po4a-${{ vars.PO4A_VERSION }}"
-          tar -xf ${PO4A_DIR}.tar.gz
-
       - name: Run po4a
-        run: |
-          export PO4A_DIR="po4a-${{ vars.PO4A_VERSION }}"
-          export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
-          ./${PO4A_DIR}/po4a --no-translations po4a.cfg
+        uses: qwrtln/po4a-action@v1
+        with:
+          version: "0.73"
+          config: "po4a.cfg"
+          args: "--no-translations"
 
       - name: Check git changes
         run: git status --porcelain translations > files.txt
