--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -243,10 +243,6 @@ jobs:
         language: ["pl", "cs", "fr", "de"]
 
     steps:
-      - name: Install poppler
-        run: |
-          sudo apt-get install -y poppler-utils
-
       - name: Download PDFs
         uses: actions/download-artifact@v4
         with:
@@ -255,7 +251,7 @@ jobs:
       - name: Check number of pages in digital version
         run: |
           file main_${{ matrix.language }}/main_${{ matrix.language }}.pdf
-          ACTUAL_NUM_OF_PAGES=$(pdfinfo main_${{ matrix.language }}/main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
+          ACTUAL_NUM_OF_PAGES=$(docker run --rm  -v "`pwd`:/app" -w /app minidocks/poppler pdfinfo main_${{ matrix.language }}/main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
           echo "Expected number of pages: ${{ needs.build.outputs.number_of_pages }}"
           echo "Actual number of pages:   ${ACTUAL_NUM_OF_PAGES}"
           if [[ ${{ needs.build.outputs.number_of_pages }} != ${ACTUAL_NUM_OF_PAGES} ]]; then
