--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -250,8 +250,8 @@ jobs:
 
       - name: Check number of pages in digital version
         run: |
-          file main_${{ matrix.language }}/main_${{ matrix.language }}.pdf
-          ACTUAL_NUM_OF_PAGES=$(docker run --rm  -v "`pwd`:/app" -w /app minidocks/poppler pdfinfo main_${{ matrix.language }}/main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
+          FILE_OUTPUT=$(file main_${{ matrix.language }}/main_${{ matrix.language }}.pdf)
+          ACTUAL_NUM_OF_PAGES=$(echo "${FILE_OUTPUT}" | grep -o '[0-9]\+ pages' | grep -o '[0-9]\+')
           echo "Expected number of pages: ${{ needs.build.outputs.number_of_pages }}"
           echo "Actual number of pages:   ${ACTUAL_NUM_OF_PAGES}"
           if [[ ${{ needs.build.outputs.number_of_pages }} != ${ACTUAL_NUM_OF_PAGES} ]]; then
