--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      number_of_pages: ${{ steps.pages.outputs.number_of_pages }}
+      number_of_pages: ${{ steps.optimize.outputs.page-count }}
     strategy:
       fail-fast: false
       matrix:
@@ -76,13 +76,6 @@ jobs:
           file-name: main_${{ matrix.language }}.pdf
           quality-level: prepress
           test-string: ${{ steps.quote.outputs.quote }}
-
-      - name: Output number of pages
-        if: matrix.language == 'en'
-        id: pages
-        run: |
-          echo "number_of_pages: ${{ steps.optimize.outputs.page-count }}"
-          echo "number_of_pages=${{ steps.optimize.outputs.page-count }}" >> $GITHUB_OUTPUT
 
       - uses: actions/upload-artifact@v4
         with:
@@ -250,8 +243,7 @@ jobs:
 
       - name: Check number of pages in digital version
         run: |
-          FILE_OUTPUT=$(file main_${{ matrix.language }}/main_${{ matrix.language }}.pdf)
-          ACTUAL_NUM_OF_PAGES=$(echo "${FILE_OUTPUT}" | grep -o '[0-9]\+ pages' | grep -o '[0-9]\+')
+          ACTUAL_NUM_OF_PAGES=$(docker run --rm  -v "`pwd`:/app" -w /app minidocks/poppler pdfinfo main_${{ matrix.language }}/main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
           echo "Expected number of pages: ${{ needs.build.outputs.number_of_pages }}"
           echo "Actual number of pages:   ${ACTUAL_NUM_OF_PAGES}"
           if [[ ${{ needs.build.outputs.number_of_pages }} != ${ACTUAL_NUM_OF_PAGES} ]]; then
