--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -227,6 +227,8 @@ jobs:
 
   check_pages:
     runs-on: ubuntu-latest
+    container:
+      image: minidocks/poppler
     needs: build
     if: github.event_name == 'pull_request'
     strategy:
@@ -242,7 +244,7 @@ jobs:
 
       - name: Check number of pages in digital version
         run: |
-          ACTUAL_NUM_OF_PAGES=$(docker run --rm  -v "`pwd`:/app" -w /app minidocks/poppler pdfinfo main_${{ matrix.language }}/main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
+          ACTUAL_NUM_OF_PAGES=$(pdfinfo main_${{ matrix.language }}/main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')docker run --rm  -v "`pwd`:/app" -w /app minidocks/poppler)
           echo "Expected number of pages: ${{ needs.build.outputs.number_of_pages }}"
           echo "Actual number of pages:   ${ACTUAL_NUM_OF_PAGES}"
           if [[ ${{ needs.build.outputs.number_of_pages }} != ${ACTUAL_NUM_OF_PAGES} ]]; then
