--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -76,7 +76,6 @@ jobs:
           file-name: main_${{ matrix.language }}.pdf
           quality-level: prepress
           test-string: ${{ steps.quote.outputs.quote }}
-          convert-to-cmyk: true
 
       - uses: actions/upload-artifact@v4
         with:
@@ -244,7 +243,7 @@ jobs:
 
       - name: Check number of pages in digital version
         run: |
-          ACTUAL_NUM_OF_PAGES=$(pdfinfo main_${{ matrix.language }}/main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')docker run --rm  -v "`pwd`:/app" -w /app minidocks/poppler)
+          ACTUAL_NUM_OF_PAGES=$(pdfinfo main_${{ matrix.language }}/main_${{ matrix.language }}.pdf | awk '/^Pages:/ {print $2}')
           echo "Expected number of pages: ${{ needs.build.outputs.number_of_pages }}"
           echo "Actual number of pages:   ${ACTUAL_NUM_OF_PAGES}"
           if [[ ${{ needs.build.outputs.number_of_pages }} != ${ACTUAL_NUM_OF_PAGES} ]]; then
