--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'draft-scenarios/**'
+      - '.github/workflows/build-and-publish-draft.yaml'
   pull_request:
     branches: [main]
     paths:
