--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Cache built PDF
         uses: actions/cache@v4
+        if: github.event_name == 'pull_request'
         id: cache-pdf
         with:
           path: |
@@ -191,6 +192,7 @@ jobs:
 
       - name: Cache built PDF
         uses: actions/cache@v4
+        if: github.event_name == 'pull_request'
         id: cache-pdf
         with:
           path: |
@@ -248,6 +250,10 @@ jobs:
           file-name: main_${{ matrix.language }}.pdf
           quality-level: prepress
           output-file: main_${{ matrix.language }}-mono.pdf
+
+      - name: Move file
+        if: steps.cache-pdf.outputs.cache-hit == 'true'
+        run: mv main_${{ matrix.language }}.pdf main_${{ matrix.language }}-mono.pdf
 
       - uses: actions/upload-artifact@v4
         with:
